Added footer html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
 
 <body>
 
-    <header></header>
+    <header>
+        <nav>
+            <ul>
+                <li>Donna</li>
+                <li>Uomo</li>
+                <li>Bambini</li>
+            </ul>
+        </nav>
+        <div><img src="img/boolean-logo.png" alt="Logo boolean"></div>
+        <nav>
+            <ul>
+                <li>profilo</li>
+                <li>preferiti</li>
+                <li>carrello</li>
+            </ul>
+        </nav>
+    </header>
 
     <main></main>
 
