Added main content structure

--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
         </nav>
     </header>
 
-    <main></main>
+    <main>
+        <section class="prodotti">
+            <article><img src="img/1.webp" alt=""></article>
+            <article><img src="img/2.webp" alt=""></article>
+            <article><img src="img/3.webp" alt=""></article>
+            <article><img src="img/4.webp" alt=""></article>
+            <article><img src="img/5.webp" alt=""></article>
+            <article><img src="img/6.webp" alt=""></article>
+        </section>
+    </main>
 
     <footer></footer>
 
