--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
 
-    <header>
+    <header class="nav-disp">
         <nav>
             <ul>
                 <li>Donna</li>
@@ -28,9 +28,9 @@
         <div><img src="img/boolean-logo.png" alt="Logo boolean"></div>
         <nav>
             <ul>
-                <li>profilo</li>
-                <li>preferiti</li>
-                <li>carrello</li>
+                <li><i class="fa-regular fa-user"></i></li>
+                <li><i class="fa-regular fa-heart"></i></li>
+                <li><i class="fa-solid fa-bag-shopping"></i></li>
             </ul>
         </nav>
     </header>
@@ -46,7 +46,26 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer class="nav-disp">
+        <nav>
+            <h2>Boolando s.r.l</h2>
+            <ul>
+                <li>Informazioni legali</li>
+                <li>Informativa sulla privacy</li>
+                <li>Diritto di recesso</li>
+            </ul>
+        </nav>
+        <nav>
+            <h2>Trovaci anche su</h2>
+            <ul>
+                <li><i class="fa-brands fa-square-twitter"></i></li>
+                <li><i class="fa-brands fa-square-facebook"></i></li>
+                <li><i class="fa-brands fa-square-instagram"></i></li>
+                <li><i class="fa-brands fa-square-pinterest"></i></li>
+                <li><i class="fa-brands fa-square-youtube"></i></li>
+            </ul>
+        </nav>
+    </footer>
 
 
 </body>
