--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <footer class="nav-disp">
         <nav>
-            <h2>Boolando s.r.l</h2>
+            <h2 class="title-left">Boolando s.r.l</h2>
             <ul>
                 <li>Informazioni legali</li>
                 <li>Informativa sulla privacy</li>
@@ -56,7 +56,7 @@
             </ul>
         </nav>
         <nav>
-            <h2>Trovaci anche su</h2>
+            <h2 class="title-right">Trovaci anche su</h2>
             <ul>
                 <li><i class="fa-brands fa-square-twitter"></i></li>
                 <li><i class="fa-brands fa-square-facebook"></i></li>
