Added favourite for product

--- a/index.html
+++ b/index.html
@@ -37,12 +37,25 @@
 
     <main>
         <section class="prodotti">
-            <article><img src="img/1.webp" alt=""></article>
-            <article><img src="img/2.webp" alt=""></article>
-            <article><img src="img/3.webp" alt=""></article>
-            <article><img src="img/4.webp" alt=""></article>
-            <article><img src="img/5.webp" alt=""></article>
-            <article><img src="img/6.webp" alt=""></article>
+            <article>
+                <img src="img/1.webp" alt="">
+                <div class="fav-box">&heartsuit;</div>
+            </article>
+            <article><img src="img/2.webp" alt="">
+                <div class="fav-box">&heartsuit;</div>
+            </article>
+            <article><img src="img/3.webp" alt="">
+                <div class="fav-box">&heartsuit;</div>
+            </article>
+            <article><img src="img/4.webp" alt="">
+                <div class="fav-box">&heartsuit;</div>
+            </article>
+            <article><img src="img/5.webp" alt="">
+                <div class="fav-box">&heartsuit;</div>
+            </article>
+            <article><img src="img/6.webp" alt="">
+                <div class="fav-box">&heartsuit;</div>
+            </article>
         </section>
     </main>
 
