--- a/index.html
+++ b/index.html
@@ -39,22 +39,29 @@
         <section class="prodotti">
             <article>
                 <img src="img/1.webp" alt="">
-                <div class="fav-box">&heartsuit;</div>
+                <div class="box fav">&heartsuit;</div>
+                <div class="box discount">&minus;50&percnt;</div>
+                <div class="box sost">Sostenibilità</div>
             </article>
             <article><img src="img/2.webp" alt="">
-                <div class="fav-box">&heartsuit;</div>
+                <div class="box fav">&heartsuit;</div>
+                <div class="box discount">&minus;30&percnt;</div>
             </article>
             <article><img src="img/3.webp" alt="">
-                <div class="fav-box">&heartsuit;</div>
+                <div class="box fav">&heartsuit;</div>
+                <div class="box discount">&minus;30&percnt;</div>
             </article>
             <article><img src="img/4.webp" alt="">
-                <div class="fav-box">&heartsuit;</div>
+                <div class="box fav">&heartsuit;</div>
+                <div class="box discount">&minus;50&percnt;</div>
+                <div class="box sost">Sostenibilità</div>
             </article>
             <article><img src="img/5.webp" alt="">
-                <div class="fav-box">&heartsuit;</div>
+                <div class="box fav">&heartsuit;</div>
             </article>
             <article><img src="img/6.webp" alt="">
-                <div class="fav-box">&heartsuit;</div>
+                <div class="box fav">&heartsuit;</div>
+                <div class="box sost">Sostenibilità</div>
             </article>
         </section>
     </main>
