Added prices on articles

--- a/index.html
+++ b/index.html
@@ -37,31 +37,84 @@
 
     <main>
         <section class="prodotti">
+            <!-- primo articolo -->
             <article>
-                <img src="img/1.webp" alt="">
-                <div class="box fav">&heartsuit;</div>
-                <div class="box discount">&minus;50&percnt;</div>
-                <div class="box sost">Sostenibilità</div>
+                <section>
+                    <img src="img/1.webp" alt="">
+                    <div class="box fav">&heartsuit;</div>
+                    <div class="box discount">&minus;50&percnt;</div>
+                    <div class="box sost">Sostenibilità</div>
+                </section>
+                <div class="prezzo">
+                    <p>Levi's</p>
+                    <p class="model">RELAXED FIT TEE UNISEX</p>
+                    <strong>14,99 &euro;</strong><span> 29,99 &euro;</span>
+                </div>
             </article>
-            <article><img src="img/2.webp" alt="">
-                <div class="box fav">&heartsuit;</div>
-                <div class="box discount">&minus;30&percnt;</div>
+            <!-- secondo articolo -->
+            <article>
+                <section>
+                    <img src="img/2.webp" alt="">
+                    <div class="box fav">&heartsuit;</div>
+                    <div class="box discount">&minus;30&percnt;</div>
+                </section>
+                <div class="prezzo">
+                    <p>Guess</p>
+                    <p class="model">ROSES TEE</p>
+                    <strong>20,99 &euro;</strong><span> 29,99 &euro;</span>
+                </div>
             </article>
-            <article><img src="img/3.webp" alt="">
-                <div class="box fav">&heartsuit;</div>
-                <div class="box discount">&minus;30&percnt;</div>
+            <!-- terzo articolo -->
+            <article>
+                <section>
+                    <img src="img/3.webp" alt="">
+                    <div class="box fav">&heartsuit;</div>
+                    <div class="box discount">&minus;30&percnt;</div>
+                </section>
+                <div class="prezzo">
+                    <p>Come Zucchero Filato</p>
+                    <p class="model">VOGLIA DI COLORI PASTELLO</p>
+                    <strong>129,99 &euro;</strong><span> 184,99 &euro;</span>
+                </div>
             </article>
-            <article><img src="img/4.webp" alt="">
-                <div class="box fav">&heartsuit;</div>
-                <div class="box discount">&minus;50&percnt;</div>
-                <div class="box sost">Sostenibilità</div>
+            <!-- quarto articolo -->
+            <article>
+                <section>
+                    <img src="img/4.webp" alt="">
+                    <div class="box fav">&heartsuit;</div>
+                    <div class="box discount">&minus;50&percnt;</div>
+                    <div class="box sost">Sostenibilità</div>
+                </section>
+                <div class="prezzo">
+                    <p>Levi's</p>
+                    <p class="model">TEE UNISEX</p>
+                    <strong>14,99 &euro;</strong><span> 29,99 &euro;</span>
+                </div>
             </article>
-            <article><img src="img/5.webp" alt="">
-                <div class="box fav">&heartsuit;</div>
+            <!-- quinto articolo -->
+            <article>
+                <section>
+                    <img src="img/5.webp" alt="">
+                    <div class="box fav">&heartsuit;</div>
+                </section>
+                <div class="prezzo">
+                    <p>Maya Deluxe</p>
+                    <p class="model">STIRPE BODICE</p>
+                    <strong>99,99 &euro;</strong>
+                </div>
             </article>
-            <article><img src="img/6.webp" alt="">
-                <div class="box fav">&heartsuit;</div>
-                <div class="box sost">Sostenibilità</div>
+            <!-- sesto articolo -->
+            <article>
+                <section>
+                    <img src="img/6.webp" alt="">
+                    <div class="box fav">&heartsuit;</div>
+                    <div class="box sost" id="last-art">Sostenibilità</div>
+                </section>
+                <div class="prezzo">
+                    <p>Esprit</p>
+                    <p class="model">MAGLIONE - BLACK</p>
+                    <strong>29,99 &euro;</strong>
+                </div>
             </article>
         </section>
     </main>
