Added hover interactions

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
             <!-- primo articolo -->
             <article>
                 <section>
-                    <img src="img/1.webp" alt="">
+                    <img class="prima" src="img/1.webp" alt="">
+                    <img class="seconda" src="img/1b.webp" alt="">
                     <div class="box fav">&heartsuit;</div>
                     <div class="box discount">&minus;50&percnt;</div>
                     <div class="box sost">Sostenibilità</div>
@@ -54,7 +55,8 @@
             <!-- secondo articolo -->
             <article>
                 <section>
-                    <img src="img/2.webp" alt="">
+                    <img class="prima" src="img/2.webp" alt="">
+                    <img class="seconda" src="img/2b.webp" alt="">
                     <div class="box fav">&heartsuit;</div>
                     <div class="box discount">&minus;30&percnt;</div>
                 </section>
@@ -67,7 +69,8 @@
             <!-- terzo articolo -->
             <article>
                 <section>
-                    <img src="img/3.webp" alt="">
+                    <img class="prima" src="img/3.webp" alt="">
+                    <img class="seconda" src="img/3b.webp" alt="">
                     <div class="box fav">&heartsuit;</div>
                     <div class="box discount">&minus;30&percnt;</div>
                 </section>
@@ -80,7 +83,8 @@
             <!-- quarto articolo -->
             <article>
                 <section>
-                    <img src="img/4.webp" alt="">
+                    <img class="prima" src="img/4.webp" alt="">
+                    <img class="seconda" src="img/4b.webp" alt="">
                     <div class="box fav">&heartsuit;</div>
                     <div class="box discount">&minus;50&percnt;</div>
                     <div class="box sost">Sostenibilità</div>
@@ -94,7 +98,8 @@
             <!-- quinto articolo -->
             <article>
                 <section>
-                    <img src="img/5.webp" alt="">
+                    <img class="prima" src="img/5.webp" alt="">
+                    <img class="seconda" src="img/5b.webp" alt="">
                     <div class="box fav">&heartsuit;</div>
                 </section>
                 <div class="prezzo">
@@ -106,7 +111,8 @@
             <!-- sesto articolo -->
             <article>
                 <section>
-                    <img src="img/6.webp" alt="">
+                    <img class="prima" src="img/6.webp" alt="">
+                    <img class="seconda" src="img/6b.webp" alt="">
                     <div class="box fav">&heartsuit;</div>
                     <div class="box sost" id="last-art">Sostenibilità</div>
                 </section>
